# Code_Reviewer_Demo

./: README.md  app.py  docker-compose.yaml  main.py  pyproject.toml
app/: database.py  main.py
app/models/: project.py
app/routers/: project.py
experiments/: code_reviewer.ipynb  markitdown.ipynb  mysql.ipynb  resume_text_extractor.ipynb
init-scripts/: init.sql
